# defrag

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  REQUIREMENTS.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: linux-dependencies-install.sh  test.yml
app/: __init__.py  check_bleachbit.py  constants.py  dynamic_page.py  language.py  left_box.py  main_area.py  main_content.py  main_window.py  right_box.py  sidebar.py  translation.py  translations.py  translator.py
config/translations/: messages.pot
config/translations/en/LC_MESSAGES/: messages.mo  messages.po
config/translations/ru/LC_MESSAGES/: messages.mo  messages.po
docs/: index.md
tests/: test_stub.py
